k8s/apps/photoprism/overlays/oksana/patch-mariadb-volume.yaml
# patch for mariadb mount path
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  template:
    spec:
      volumes:
        - name: data
          hostPath:
            path: /mnt/thedatapool/app-data/photoprism-oksana/mariadb-data
